# pen-it-down

./: .gitignore  Makefile  README.md  dune  dune-project  index.html  note_app.opam  pen_it_down.opam
.github/workflows/: setup.yml
client/: client.ml  client.mli  dune
client/lib/: dune  shared.ml  store.ml  store.mli
server/: dune  server.ml
static/: style.css
