opam-version: "2.8"

synopsis: "A note-taking application"
description: "This is a simple note-taking application"

license: "MIT"
homepage: "https://github.com/dinakajoy/note_app"
bug-reports: "https://github.com/dinakajoy/note_app/issues"

author: "Odinaka Joy <dinakajoy@gmail.com> and Patrick Ferris <pf341@patricoferris.com>"
maintainer: "Odinaka Joy <dinakajoy@gmail.com> and Patrick Ferris <pf341@patricoferris.com>"

depends: [
  "dream"
  "dune" {>= "2.8.0"} 
  "js_of_ocaml-lwt" {= "3.11.0"}
  "js_of_ocaml-ppx"
  "brr" {>= "0.0.2"}
  "irmin" {>= "3.1.0"}
  "ocaml" {>= "4.13.1"}
]