opam-version: "2.0"

synopsis: "A note-taking application"
description: "This is a simple note-taking application"

license: "MIT"
homepage: "https://github.com/dinakajoy/pen-it-down"
bug-reports: "https://github.com/dinakajoy/pen-it-down/issues"

author: "Odinaka Joy <dinakajoy@gmail.com> and Patrick Ferris <pf341@patricoferris.com>"
maintainer: "Odinaka Joy <dinakajoy@gmail.com> and Patrick Ferris <pf341@patricoferris.com>"

depends: [
  "dune"
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "brr"
  "ocaml" {>= "4.14.1"} 
  "omd"
]

pin-depends: [
  ["irmin-indexeddb" "git+https://github.com/patricoferris/irmin-indexeddb#5d870f08d0f63c2df0d76248cc453a0e2ca4b2bb"]
]
